# evktor

./: .clang-format  .clangd  .gitignore  .nlsp.json  .rustfmt.toml  CMakeLists.txt  Cargo.toml  Justfile  Makefile  QWEN.md  README.md  TASK.md  pyproject.toml  pyrightconfig.json  vcpkg.json  xmake.lua
src/alpha/: CMakeLists.txt  alpha.cpp
src/libmisc/: CMakeLists.txt  assets.cpp  assets.h  camera.cpp  camera.h  efmt.cpp  efmt.h  mesh.h  mesh_data.cpp  model.cpp  model.h  singleton.h  xwin.cpp  xwin.h
src/libvkt_devel/: CMakeLists.txt  assets.cpp  assets.hpp  camera.cpp  camera.hpp  scene.cpp  scene.hpp  simple_mesh.cpp  simple_mesh.hpp  window.cpp  window.hpp
src/libvkt_layer/: CMakeLists.txt  entry.cpp  entry.hpp  vkt_layer.cpp  vkt_layer.hpp
src/libvkt_scene/: CMakeLists.txt  component.cpp  component.hpp  gltf_loader.cpp  gltf_loader.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
src/libvkt_scene/components/: image.hpp  material.hpp  mesh_sub.cpp  mesh_sub.hpp  sampler.hpp  submesh.cpp  texture.hpp  transform.cpp  transform.hpp
src/libvkt_share/: CMakeLists.txt  camera.cpp  camera.hpp
src/libvkt_share/share/: result.hpp  share.hpp
src/libvktor/: CMakeLists.txt  vktor.cpp  vktor.hpp
src/libvktor/common/: defs.hpp  helpers.hpp  printer.hpp  result.hpp  traits.hpp
src/libvktor/scene/: scene.cpp  scene.hpp
src/libvktor/share/: defines.hpp  helpers.hpp  resource_cache.hpp  result.hpp  share.cpp  share.hpp  traits.hpp
src/libvktor/vktor/: config.hpp
src/libvktor/vktor/base/: api.cpp  api.hpp  render_context.cpp  render_context.hpp  render_frame.cpp  render_frame.hpp  render_target.cpp  render_target.hpp  resource_cache.hpp  shader.cpp  shader.hpp  shader_glsl.cpp  shader_glsl.hpp  texture.cpp  texture.hpp
src/libvktor/vktor/core/: __builder.hpp  __core.hpp  __hash.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  debug.cpp  debug.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_setlayout.cpp  descriptor_setlayout.hpp  device.cpp  device.hpp  device_memory.hpp  event.cpp  event.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline_cache.hpp  pipeline_compute.cpp  pipeline_compute.hpp  pipeline_graphics.cpp  pipeline_graphics.hpp  pipeline_layout.cpp  (+19 more)
src/libvktor/vktor/render_graph/: render_graph.cpp  render_graph.hpp
src/libvktor/vktor/rendering/: render_context.cpp  render_context.hpp  render_frame.cpp  render_frame.hpp  render_pipeline.cpp  render_pipeline.hpp  render_resource.cpp  render_subpass.cpp  render_subpass.hpp  render_target.cpp  render_target.hpp
src/main/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/omega/: CMakeLists.txt  demo_deferred.cpp  demo_filter.cpp  demo_frustum.cpp  demos.h  glbase.cpp  glbase.h  omega.cpp
src/omega/lib/: font.h  utils.cpp  utils.h
src/omega/misc/: assets.cpp  assets.hpp
src/sigma/: CMakeLists.txt  sample.cpp
src_gl/: .gitignore  CMakeLists.txt  Justfile  vcpkg.json
src_gl/omega/: CMakeLists.txt  demo_deferred.cpp  demo_frustum.cpp  demos.h  glbase.h
src_gl/omega/lib/: font.cpp  shader.cpp  shader.h  utils.h
src_gl/omega/misc/: camera.cpp  camera.hpp  mesh_data.h  xwin.cpp  xwin.h
src_vk/evktor/: CMakeLists.txt  app.cpp  app.h
src_vk/evktor/devel/: app_interface.cpp  app_interface.hpp  assets.hpp  gltf_helper.hpp
src_vk/libvkt_layer/: CMakeLists.txt  vkt_layer.hpp
src_vk/libvkt_scene/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp
src_vk/libvkt_scene/vkt_scene/: builtin_mesh.hpp  component.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  transform.hpp
src_vk/libvkt_scene/vkt_scene/components/: buffer.hpp  image.hpp  material.hpp  mesh.cpp  mesh.hpp  sampler.hpp  texture.hpp  transform.cpp  transform.hpp
src_vk/libvkt_scene/vkt_scene/subpasses/: builtin_subpass.cpp  geometry_subpass.hpp
src_vk/libvktor/: CMakeLists.txt  vktor.hpp
src_vk/libvktor/share/: libglm.hpp  printer.cpp  printer.hpp  resource_cache.hpp  share.hpp
src_vk/libvktor/share/helpers/: helpers.hpp  resource_cache.hpp
src_vk/libvktor/vkt_scene/: builtin_mesh.cpp  builtin_mesh.hpp  component.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp  vkt_scene.cpp  vkt_scene.hpp
src_vk/libvktor/vkt_scene/components/: buffer.hpp  camera.cpp  camera.hpp  image.hpp  material.cpp  material.hpp  mesh.hpp  sampler.hpp
src_vk/libvktor/vkt_scene/subpasses/: builtin.cpp  builtin_subpass.cpp  builtin_subpass.hpp  geometry.cpp  geometry.hpp  geometry_subpass.cpp  geometry_subpass.hpp
src_vk/libvktor/vktor/: vktor.cpp  vktor.hpp
src_vk/libvktor/vktor/base/: shader.cpp  shader.hpp  shader_glsl.cpp  shader_glsl.hpp  texture.cpp  texture.hpp
src_vk/libvktor/vktor/core/: __core.hpp  __hash.hpp  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_setlayout.cpp  descriptor_setlayout.hpp  device_memory.cpp  device_memory.hpp  device_memory_pool.cpp  device_memory_pool.hpp  event.cpp  event.hpp  fence.cpp  fence.hpp  framebuffer.cpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  pipeline_cache.cpp  pipeline_compute.cpp  pipeline_graphics.cpp  pipeline_graphics.hpp  pipeline_layout.cpp  query_pool.cpp  query_pool.hpp  render_pass.cpp  render_pass.hpp  sampler.cpp  sampler.hpp  semaphore.cpp  semaphore.hpp  (+2 more)
src_vk/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  __helpers.cpp  __helpers.hpp  case_core.cpp  case_core_api.cpp  case_core_compute.cpp  case_core_graphics.cpp  case_core_memory.cpp  case_dep_glm.cpp  case_dep_glslang.cpp  case_dep_gltf.cpp  case_glm.cpp  case_glslang.cpp  case_gltf.cpp  case_rctx_cooperative_matrix.cpp  case_rctx_cooperative_matrix.py  case_rctx_dynamic_rendering.cpp  case_result.cpp  case_share_result.cpp  tst_core.cpp  tst_glm.cpp  tst_glslang.cpp  tst_main.cpp  tst_result.cpp
(+137 files in other folders)
